--- a/index.html
+++ b/index.html
@@ -29,23 +29,70 @@
       <section>
 
         <article>
-          <h1>記事１</h1>
+          <h1>描いた絵</h1>
+          <img src="images/car.jpg" width="320">
           <p>
-            Webの技術は、対外向けの情報発信のみならず、組織内部の情報共有、個人的なノートとして、さらにプレゼンテーションツールとしても活用できます。ここでは、Web標準技術としてのHTMLとCSSを用いたWebページの制作体験を行います。制作からアップロードまで、すべてオープンソースのフリーソフトウエア( Win / Mac 対応 )を利用しますので、経費の負担なく、各自の研究室のPCで学習を継続することができます。
+            "one hour sketch"
           </p>
         </article>
 
         <article>
-          <h1>記事１</h1>
+          <h1>好きな動画</h1>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/GBUAez6w5ec" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           <p>
-            Webの技術は、対外向けの情報発信のみならず、組織内部の情報共有、個人的なノートとして、さらにプレゼンテーションツールとしても活用できます。ここでは、Web標準技術としてのHTMLとCSSを用いたWebページの制作体験を行います。制作からアップロードまで、すべてオープンソースのフリーソフトウエア( Win / Mac 対応 )を利用しますので、経費の負担なく、各自の研究室のPCで学習を継続することができます。
+            <i></i> love this music
           </p>
+        </article>
+
+        <article>
+          <h1>僕の実家</h1>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d167998.109426429!2d2.2066349367268656!3d48.85877368817009!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e66e2964e34e2d%3A0x8ddca9ee380ef7e0!2z44Ko44OD44OV44Kn44Or5aGU!5e0!3m2!1sja!2sjp!4v1620700512311!5m2!1sja!2sjp" width="480" height="360" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        </article>
+
+
+
+        <article>
+          <h1>WEB</h1>
+          <iframe src="https://design.kyusan-u.ac.jp/OpenSquareJP/?WebDesign/%E5%A4%A7%E5%AD%A6%E9%99%A2%E9%80%9F%E7%BF%92%E8%AC%9B%E5%BA%A7" width="480" height="360" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        </article>
+
+        <article>
+
+          <h1>表組み</h1>
+  <table  border="1" rules="all">
+      <thead>
+           <tr>
+                <th>商品</th>
+                <th>価格</th>
+           </tr>
+      </thead>
+      <tfoot>
+           <tr>
+                <td>合計金額</td>
+                <td>250円</td>
+           </tr>
+      </tfoot>
+      <tbody>
+           <tr>
+                <td>鉛筆</td>
+                <td>150円</td>
+           </tr>
+           <tr>
+                <td>消しゴム</td>
+                <td>100円</td>
+           </tr>
+      </tbody>
+  </table>
         </article>
 
       </section>
 
       <aside>
-        aside
+        <h1>Google検索</h1>
+        <form action="http://www.google.com/search" method="get">
+  　　　　　<label >Google: </label>
+  　　　　　<input type="search" name="q">
+　　　　　</form>
       </aside>
 
     </main>
